frontend/kubernetes/frontend-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: frontend
    name: frontend
  name: frontend
spec:
  replicas: 2
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
        name: frontend
    spec:
      containers:
      - name: frontend
        image: frontend:latest
        ports:
          - containerPort: 80
        imagePullPolicy: IfNotPresent
